// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`FilterSkeleton > should render correctly 1`] = `
<div>
  <div
    class="filter_container"
  >
    <div
      aria-label="click me!"
      class="filter_box"
      role="filter_box"
    >
      <div
        class="filter_title"
        style="padding-bottom: 0px;"
      >
        <svg
          class="filter_icon"
          fill="none"
          viewBox="0 0 20 18"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M0.152157 0.894636C0.41 0.347697 0.956939 0 1.56248 0H18.4395C19.045 0 19.5919 0.347697 19.8498 0.894636C20.1076 1.44158 20.0295 2.08618 19.6466 2.55499L12.5013 11.2865V16.2519C12.5013 16.7246 12.2356 17.1583 11.8098 17.3692C11.3839 17.5802 10.88 17.5372 10.501 17.252L8.00073 15.3768C7.68429 15.1424 7.50067 14.7713 7.50067 14.3767V11.2865L0.3514 2.55108C-0.0275511 2.08618 -0.109592 1.43767 0.152157 0.894636Z"
            fill="#6D6D6D"
          />
        </svg>
        Filter
        <div
          style="margin-left: 5px;"
        >
          (
          8
           valgt)
        </div>
      </div>
      <div
        class="filter_values_container"
        role="filter_values_container"
        style="visibility: hidden; height: 0px; padding-top: 0px;"
      >
        <label
          class="filter_value"
        >
          <input
            checked=""
            class="filter_button"
            type="checkbox"
            value="Adressenavn"
          />
          Adressenavn
        </label>
        <label
          class="filter_value"
        >
          <input
            checked=""
            class="filter_button"
            type="checkbox"
            value="By"
          />
          By
        </label>
        <label
          class="filter_value"
        >
          <input
            checked=""
            class="filter_button"
            type="checkbox"
            value="Bydel"
          />
          Bydel
        </label>
        <label
          class="filter_value"
        >
          <input
            checked=""
            class="filter_button"
            type="checkbox"
            value="Gard"
          />
          Gard
        </label>
        <label
          class="filter_value"
        >
          <input
            checked=""
            class="filter_button"
            type="checkbox"
            value="Forretningsbygg"
          />
          Forretningsbygg
        </label>
        <label
          class="filter_value"
        >
          <input
            checked=""
            class="filter_button"
            type="checkbox"
            value="Bruk"
          />
          Bruk
        </label>
        <label
          class="filter_value"
        >
          <input
            checked=""
            class="filter_button"
            type="checkbox"
            value="Tjern"
          />
          Tjern
        </label>
        <label
          class="filter_value"
        >
          <input
            checked=""
            class="filter_button"
            type="checkbox"
            value="Skole"
          />
          Skole
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`FilterSkeleton > should render correctly with no current filters 1`] = `
<div>
  <div
    class="filter_container"
  >
    <div
      aria-label="click me!"
      class="filter_box"
      role="filter_box"
    >
      <div
        class="filter_title"
        style="padding-bottom: 0px;"
      >
        <svg
          class="filter_icon"
          fill="none"
          viewBox="0 0 20 18"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M0.152157 0.894636C0.41 0.347697 0.956939 0 1.56248 0H18.4395C19.045 0 19.5919 0.347697 19.8498 0.894636C20.1076 1.44158 20.0295 2.08618 19.6466 2.55499L12.5013 11.2865V16.2519C12.5013 16.7246 12.2356 17.1583 11.8098 17.3692C11.3839 17.5802 10.88 17.5372 10.501 17.252L8.00073 15.3768C7.68429 15.1424 7.50067 14.7713 7.50067 14.3767V11.2865L0.3514 2.55108C-0.0275511 2.08618 -0.109592 1.43767 0.152157 0.894636Z"
            fill="#6D6D6D"
          />
        </svg>
        Filter
      </div>
      <div
        class="filter_values_container"
        role="filter_values_container"
        style="visibility: hidden; height: 0px; padding-top: 0px;"
      >
        <label
          class="filter_value"
        >
          <input
            class="filter_button"
            type="checkbox"
            value="Adressenavn"
          />
          Adressenavn
        </label>
        <label
          class="filter_value"
        >
          <input
            class="filter_button"
            type="checkbox"
            value="By"
          />
          By
        </label>
        <label
          class="filter_value"
        >
          <input
            class="filter_button"
            type="checkbox"
            value="Bydel"
          />
          Bydel
        </label>
        <label
          class="filter_value"
        >
          <input
            class="filter_button"
            type="checkbox"
            value="Gard"
          />
          Gard
        </label>
        <label
          class="filter_value"
        >
          <input
            class="filter_button"
            type="checkbox"
            value="Forretningsbygg"
          />
          Forretningsbygg
        </label>
        <label
          class="filter_value"
        >
          <input
            class="filter_button"
            type="checkbox"
            value="Bruk"
          />
          Bruk
        </label>
        <label
          class="filter_value"
        >
          <input
            class="filter_button"
            type="checkbox"
            value="Tjern"
          />
          Tjern
        </label>
        <label
          class="filter_value"
        >
          <input
            class="filter_button"
            type="checkbox"
            value="Skole"
          />
          Skole
        </label>
      </div>
    </div>
  </div>
</div>
`;
